# aggdraw

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  CHANGES  CODEONWERS  LICENSE.txt  MANIFEST.in  PKG-INFO  README  README.rst  aggdraw.cxx  appveyor.yml  pyproject.toml  selftest.py  setup.py  test-path-proof.ps
.github/workflows/: ci.yml
agg/font_freetype/: agg_font_freetype.cpp  agg_font_freetype.h
agg/include/platform/win32/: agg_win32_bmp.h
agg/src/platform/win32/: agg_platform_support.cpp
agg2/: README.txt
agg2/.svn/: all-wcprops  entries
agg2/font_freetype/: agg_font_freetype.cpp  agg_font_freetype.h
agg2/font_freetype/.svn/: all-wcprops  entries
agg2/include/: agg_array.h  agg_trans_affine.h
agg2/include/.svn/: all-wcprops  entries
agg2/include/ctrl/.svn/: all-wcprops  entries
agg2/include/dbg_new/.svn/: all-wcprops  entries
agg2/include/platform/.svn/: all-wcprops  entries
agg2/include/util/.svn/: all-wcprops  entries
agg2/src/.svn/: all-wcprops  entries
agg2/src/ctrl/.svn/: all-wcprops  entries
agg2/src/dbg_new/.svn/: all-wcprops  entries
agg2/src/platform/.svn/: all-wcprops  entries
agg2/src/platform/BeOS/: agg_platform_support.cpp
agg2/src/platform/mac/: agg_platform_support.cpp
agg2/src/platform/win32/: agg_platform_support.cpp
aggdraw/: __init__.py  _aggdraw.cxx  core.py  dib.py
aggdraw/tests/: test_aggdraw.py
ci/: appveyor-build.bat  appveyor-install.bat  appveyor-twine.ps1  environment.yaml  travis-build.sh  travis-install.sh
doc/source/: conf.py  index.rst
patches/: tags_pointer_type_fix.patch
(+19 files in other folders)
